--- a/src/app/home/articles/articles.component.html
+++ b/src/app/home/articles/articles.component.html
@@ -1,7 +1,7 @@
 <div class="page background-medium">
     <div class="page-container">
         <header><h1>Articles</h1></header>
-        <main class="container">
+        <main class="container background-light">
             <h2>Editor Picks</h2>
             <div class="article-grid">
                 <app-article-item *ngFor="let item of articleItems"
