--- a/src/app/home/education-certification/education-certification.component.html
+++ b/src/app/home/education-certification/education-certification.component.html
@@ -2,7 +2,7 @@
 <div class="page background-medium">
     <div class="page-container">
         <header><h1>Education|Certification</h1></header>
-        <main>
+        <main class="background-light">
             <div class="edu-cert-item" *ngFor="let item of eduCertItems">
                 <app-edu-cert-item [item]="item"></app-edu-cert-item>
             </div>
