--- a/src/app/home/projects-experience/projects-experience.component.html
+++ b/src/app/home/projects-experience/projects-experience.component.html
@@ -2,7 +2,7 @@
     <div class="page-container">
         <header><h1>Projects|Experience</h1></header>
 
-        <main>
+        <main class="background-medium">
             <div class="showcase">
                 <div>
                     <img
