--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,13 +1,8 @@
 <div class="page">
     <nav class="page-container">
         <div class="nav-container">
-            <div class="logo" [routerLink]="['/home']">
-                <div class="circle-outer">
-                    <div class="circle-inner">
-                        <h3>N</h3>
-                    </div>
-                </div>
-            </div>
+            <img src="../../../assets/logo.png" alt="My Portfolio logo"
+                id="logo">
 
             <div class="nav-links">
                 <ul>
