--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -1,33 +1,46 @@
 <div class="page">
     <div class="page-container">
         <main>
-            <div class="name-title">
-                <div>
-                    <h1 class="grid-col-span-2">Hello my name is Nicholas</h1>
+            <div class="name-skills">
+
+                <div class="name-title">
+                    <h1>Nicholas Chibuike-Eruba <span>Bsc. Computing and
+                            Information Technology</span></h1>
+                    <p>I have experience in...</p>
                 </div>
 
-                <div>
-                    <p>{{skill}}</p>
-                </div>
-                <div>
+                <div class="skills">
                     <ul>
-                        <li><a href="#">Download CV</a></li>
-                        <li><a href="https://github.com/El-Nico" target="_blank">Go
-                                to
-                                Github</a></li>
+                        <li><a href="#">Data Analysis</a></li>
+                        <li><a href="#">Machine Learning</a></li>
+                        <li><a href="#">Web Development</a></li>
                     </ul>
                 </div>
+
             </div>
             <div class="picture-showcase">
+
                 <div class="image-box">
                     <img
                         src="https://source.unsplash.com/random/40x40?black,male,portrait/"
                         alt="carousel-img">
                 </div>
-                <p>Check out my
-                    <a [routerLink]="['/articles','tutorial-showcaser']">TutorialShowcaser</a>
-                    app or
-                </p>
+                <div class="checkout">
+                    <p>Check out my
+                        <a [routerLink]="['/articles','tutorial-showcaser']"
+                            class="btn btn-main">Tutorial Showcaser</a>
+                        app or
+                    </p>
+
+                    <ul>
+                        <li><a href="#" class="btn btn-light">Download CV</a></li>
+                        <li><a href="https://github.com/El-Nico"
+                                target="_blank" class="btn btn-light">Go
+                                to
+                                Github</a></li>
+                    </ul>
+                </div>
+
             </div>
 
         </main>
