--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,6 +9,7 @@
     display:grid;
     grid-template-columns: 1fr;
     min-width: 250px;
+    position: relative;
 }
 
 header{
@@ -16,6 +17,7 @@ background: url('https://firebasestorage.googleapis.com/v0/b/portfolio-website-v
 position: relative;
 height: 100vh;
 display: grid;
+z-index: 3;
 }
 header::before {
     content: "";
@@ -24,7 +26,7 @@ header::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(36, 36, 67, 0.6);
     z-index: 1;
 }
 
@@ -49,6 +51,7 @@ main{
 .home-container{
     display: grid;
     grid-template-columns: fit-content(1rem) 1fr;
+    z-index: 2;
 }
 
 /* .yellow-bar, #about{
@@ -86,7 +89,7 @@ border: 1px solid rgba(255, 255, 255, 0.45);
 }
 
 .yellow-bar:first-child, .yellow-bar:last-child{
-    border-radius: 16px;
+    overflow: hidden;
 }
 
 .page-sections{
@@ -97,7 +100,3 @@ border: 1px solid rgba(255, 255, 255, 0.45);
 section{
     min-height: 100vh;
 }
-/* section>*{
-    display: inline-block;
-    min-height: 100vh;
-} */
