--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -7,27 +7,25 @@ h3{
     padding: 1rem;
 }
 
-.circle-outer,.circle-inner{
-    width: fit-content;
-    border-radius: 50%;
-}
+
 
 .nav-container{
     display: flex;
     /* grid-template-columns: repeat( auto-fit, minmax(320px, max-content)); */
     /* grid-template-columns: min-content minmax(min-content, max-content); */
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
 }
 
-.logo{
-    flex: 1;
-    align-self: center;
+#logo{
+    /* flex: 1;
+    align-self: center; */
+    width: 40px;
+    height: 40px;
+    color: #fff;
 }
 
-.circle-outer{
-    margin: 0 auto;
-}
 
 ul{
     display: flex;
@@ -35,7 +33,7 @@ ul{
 }
 
 ul>Li{
-    padding: 1rem 1.5rem;
+    padding: 0rem 0.5rem;
     flex:1;
 }
 
@@ -47,7 +45,7 @@ ul>li>a{
     transition: border-color 0.5s;
     cursor: pointer;
 
-    font-size: 1rem;
+    font-size: 0.75rem;
 }
 
 ul>li>a:hover{
