improved articles page

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -4,7 +4,7 @@
                         <h1>About</h1>
                 </div>
 
-                <main class="background-medium">
+                <main class="background-medium p-1">
 
                         <img
                                 src="https://source.unsplash.com/random/200x200?black,male,portrait/"
