--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -1,10 +1,10 @@
 <div class="page background-light">
     <div class="page-container">
         <header><h1 class="section-title">Contact Me</h1></header>
-        <div class="bottom-line"></div>
-        <p class="lead">Here's how to reach me</p>
+        <!-- <div class="bottom-line"></div>
+        <p class="lead">Here's how to reach me</p> -->
 
-        <main class="background-medium">
+        <main class="background-medium p-1">
             <form class="form" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
                 <div class="text-fields">
 
