--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -4,7 +4,8 @@
             <div class="name-skills">
 
                 <div class="name-title">
-                    <h1>Nicholas Chibuike-Eruba <span>Bsc. Computing and
+                    <h1>Nicholas Chibuike-Eruba <span class="title">Bsc.
+                            Computing and
                             Information Technology</span></h1>
                     <p>I have experience in...</p>
                 </div>
@@ -22,7 +23,7 @@
 
                 <div class="image-box">
                     <img
-                        src="https://source.unsplash.com/random/40x40?black,male,portrait/"
+                        src="https://source.unsplash.com/random/200x200?black,male,portrait/"
                         alt="carousel-img">
                 </div>
                 <div class="checkout">
