--- a/src/app/home/articles/article-item/article-item.component.html
+++ b/src/app/home/articles/article-item/article-item.component.html
@@ -1,17 +1,27 @@
-<article [class]="item.cardClasses" (click)="toggleEditMode()">
-    <img *ngIf="item.imgUrl && !item.imgDown" [src]="item.imgUrl"
-        [routerLink]="item.articleUrl" alt>
-    <div>
-        <div [class]="item.categoryClasses">{{item.category}}</div>
-        <h3>
-            <a [routerLink]="item.articleUrl"
-                routerLinkActive="router-link-active">{{item.articleTitle}}</a>
-        </h3>
-        <p>{{item.articleDesc}}</p>
-        <img *ngIf="item.imgUrl && item.imgDown && item.imgDown==true"
-            [src]="item.imgUrl" [routerLink]="item.articleUrl" alt>
-    </div>
-    <!-- <form *ngIf="isLoggedIn && editMode==true" [formGroup]="editArticleItemForm"
+
+<img *ngIf="item.imgUrl && !item.imgDown" [src]="item.imgUrl"
+    [routerLink]="item.articleUrl" alt>
+<div *ngIf="!item.halfCard; else halfCard">
+    <div [class]="item.categoryClasses">{{item.category}}</div>
+    <h3>
+        <a [routerLink]="item.articleUrl"
+            routerLinkActive="router-link-active">{{item.articleTitle}}</a>
+    </h3>
+    <p>{{item.articleDesc}}</p>
+    <img *ngIf="item.imgUrl && item.imgDown && item.imgDown==true"
+        [src]="item.imgUrl" [routerLink]="item.articleUrl" alt>
+</div>
+<ng-template #halfCard>
+    <div [class]="item.categoryClasses">{{item.category}}</div>
+    <h3>
+        <a [routerLink]="item.articleUrl"
+            routerLinkActive="router-link-active">{{item.articleTitle}}</a>
+    </h3>
+    <p>{{item.articleDesc}}</p>
+    <img *ngIf="item.imgUrl && item.imgDown && item.imgDown==true"
+        [src]="item.imgUrl" [routerLink]="item.articleUrl" alt>
+</ng-template>
+<!-- <form *ngIf="isLoggedIn && editMode==true" [formGroup]="editArticleItemForm"
         (ngSubmit)="onSubmit">
 
         <div class="input">
@@ -72,4 +82,3 @@
         </div>
         <button type="submit" class="btn-dark">Submit</button>
     </form> -->
-</article>
