--- a/src/app/home/articles/articles.component.html
+++ b/src/app/home/articles/articles.component.html
@@ -1,12 +1,16 @@
 <div class="page background-medium">
     <div class="page-container">
-        <header><h1>Articles</h1></header>
-        <main class="container background-light">
-            <h2>Editor Picks</h2>
-            <div class="article-grid">
-                <app-article-item *ngFor="let item of articleItems"
-                    [item]="item"></app-article-item>
-            </div>
-        </main>
+        <header><h1>Articles</h1>
+            <h2>Editor Picks</h2></header>
+        <!-- <main class="container background-light p-1"> -->
+
+        <div class="article-grid background-light p-1">
+            <app-article-item *ngFor="let item of articleItems"
+                [item]="item" class="card">
+                <!-- (click)="toggleEditMode()" -->
+                <!-- https://stackoverflow.com/questions/43447775/objectunsubscribederror-object-unsubscribed-error-when-i-am-using-ngx-progress -->
+            </app-article-item>
+        </div>
+        <!-- </main> -->
     </div>
 </div>
