--- a/src/app/home/education-certification/education-certification.component.html
+++ b/src/app/home/education-certification/education-certification.component.html
@@ -1,8 +1,7 @@
-
 <div class="page background-medium">
     <div class="page-container">
         <header><h1>Education|Certification</h1></header>
-        <main class="background-light">
+        <main class="background-light p-1">
             <div class="edu-cert-item" *ngFor="let item of eduCertItems">
                 <app-edu-cert-item [item]="item"></app-edu-cert-item>
             </div>
