--- a/src/app/home/hero/hero.component.css
+++ b/src/app/home/hero/hero.component.css
@@ -12,6 +12,11 @@ main{
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: 1fr, 1fr;
+    align-items: center;
+}
+
+.title{
+    font-size: 0.5em;
 }
 .name-title, .skills{
     text-align: left;
@@ -42,7 +47,9 @@ main{
 
 .picture-showcase{
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-auto-flow: row;
+    /* grid-template-rows: 1fr 1fr; */
+    /* align-items: center; */
 }
 .image-box{
     display: grid;
