--- a/src/app/home/projects-experience/projects-experience.component.css
+++ b/src/app/home/projects-experience/projects-experience.component.css
@@ -10,6 +10,19 @@
     background-color: red;
 }
 
+header{
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+header>h1::after{
+    content: "";
+    height: 2px;
+    width: 3rem;
+    background: var(--main-colour);
+    display: block;
+    margin: 0 auto 1rem auto;
+}
+
 
 main{
     height: 100%;
