--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="page">
+<div class="page" [class]="bgMode">
     <nav class="page-container">
         <div class="nav-container">
             <img src="../../../assets/logo.png" alt="My Portfolio logo"
