--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,6 +1,6 @@
 <div class="page">
     <header>
-        <app-navbar></app-navbar>
+        <app-navbar [bgMode]="'bg-dark'"></app-navbar>
     </header>
     <main><p>article works!</p></main>
     <app-footer></app-footer>
