--- a/src/app/home/articles/article-item/article-item.component.html
+++ b/src/app/home/articles/article-item/article-item.component.html
@@ -1,26 +1,36 @@
 
-<img *ngIf="item.imgUrl && !item.imgDown" [src]="item.imgUrl"
-    [routerLink]="item.articleUrl" alt>
-<div *ngIf="!item.halfCard; else halfCard">
-    <div [class]="item.categoryClasses">{{item.category}}</div>
-    <h3>
-        <a [routerLink]="item.articleUrl"
-            routerLinkActive="router-link-active">{{item.articleTitle}}</a>
-    </h3>
-    <p>{{item.articleDesc}}</p>
-    <img *ngIf="item.imgUrl && item.imgDown && item.imgDown==true"
-        [src]="item.imgUrl" [routerLink]="item.articleUrl" alt>
+<div *ngIf="item.imgUrl && !item.imgDown" [ngStyle]="articleImg()"
+    class="article-img">
+    stuff
 </div>
-<ng-template #halfCard>
+<!-- <img *ngIf="item.imgUrl && !item.imgDown" [src]="item.imgUrl"
+    [routerLink]="item.articleUrl" alt> -->
+<!-- <div *ngIf="!item.halfCard; else halfCard"> -->
+<div class="content">
     <div [class]="item.categoryClasses">{{item.category}}</div>
     <h3>
         <a [routerLink]="item.articleUrl"
             routerLinkActive="router-link-active">{{item.articleTitle}}</a>
     </h3>
     <p>{{item.articleDesc}}</p>
-    <img *ngIf="item.imgUrl && item.imgDown && item.imgDown==true"
-        [src]="item.imgUrl" [routerLink]="item.articleUrl" alt>
-</ng-template>
+
+    <!-- <img *ngIf="item.imgUrl && item.imgDown && item.imgDown==true"
+        [src]="item.imgUrl" [routerLink]="item.articleUrl" alt> -->
+</div>
+<div *ngIf="item.imgUrl && item.imgDown && item.imgDown==true"
+    [ngStyle]="articleImg()" class="article-img">stuff</div>
+<!--<ng-template #halfCard>
+    <div [class]="item.categoryClasses">{{item.category}}</div>
+    <h3>
+        <a [routerLink]="item.articleUrl"
+            routerLinkActive="router-link-active">{{item.articleTitle}}</a>
+    </h3>
+    <p>{{item.articleDesc}}</p>
+    <div *ngIf="item.imgUrl && item.imgDown && item.imgDown==true"
+        [ngStyle]="articleImg()"></div>
+    <!f-- <img *ngIf="item.imgUrl && item.imgDown && item.imgDown==true"
+        [src]="item.imgUrl" [routerLink]="item.articleUrl" alt> -f->
+</ng-template>-->
 <!-- <form *ngIf="isLoggedIn && editMode==true" [formGroup]="editArticleItemForm"
         (ngSubmit)="onSubmit">
 
