--- a/src/app/home/articles/articles.component.css
+++ b/src/app/home/articles/articles.component.css
@@ -12,7 +12,7 @@
 
 header{
   margin-bottom: 2rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 header>h1::after{
   content: "";
@@ -28,18 +28,29 @@ header>h1::after{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
+    grid-auto-rows: min-content;
+  }
+
+  .article-grid .span-1{
+    display: grid;
+    grid-auto-flow: row;
+    grid-template-rows: 1fr 1fr; 
   }
   
   
-  .article-grid > *:first-child,
-  .article-grid > *:last-child 
+  .article-grid .span-2:first-child,
+  .article-grid .span-2:last-child 
   {
     display: grid;
+    /* grid-template-rows: 1fr; */
     grid-auto-flow: column;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(100px,1fr));
     grid-gap: 1rem;
     align-items: center;
     grid-column: 1 / span 2;
+    grid-auto-rows: min-content;
+
+/* max-height: 250px;; */
   }
   
   .page .article-grid > *:last-child {
