--- a/src/app/home/articles/articles.component.html
+++ b/src/app/home/articles/articles.component.html
@@ -1,12 +1,14 @@
 <div class="page background-medium">
     <div class="page-container">
         <header><h1>Articles</h1>
-            <h2>Editor Picks</h2></header>
+            <!-- <h2>Editor Picks</h2> -->
+        </header>
         <!-- <main class="container background-light p-1"> -->
 
         <div class="article-grid background-light p-1">
             <app-article-item *ngFor="let item of articleItems"
-                [item]="item" class="card">
+                [item]="item" [class]="item.cardClasses"
+                [class.span-1]="isSingleSpan(item)">
                 <!-- (click)="toggleEditMode()" -->
                 <!-- https://stackoverflow.com/questions/43447775/objectunsubscribederror-object-unsubscribed-error-when-i-am-using-ngx-progress -->
             </app-article-item>
