--- a/src/app/home/articles/general-settings.css
+++ b/src/app/home/articles/general-settings.css
@@ -8,10 +8,10 @@ h1,h2,h3,h4,h5,h6{
     margin-bottom: .55rem;
     line-height: 1.3;
   }
-
+/* 
   .page-container{
     padding: 0 2rem;
-  }
+  } */
 
    /* utility */
 
@@ -40,4 +40,8 @@ h1,h2,h3,h4,h5,h6{
   .card {
     background: #fff;
     padding: 1rem;
+  }
+
+  img{
+    /* max-width: 220px; */
   }
